--- a/print.html
+++ b/print.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Alfabetiza</a></li><li class="chapter-item expanded "><a href="documentation/documentation-description.html"><strong aria-hidden="true">1.</strong> Documentação</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="documentation/cloning/cloning.html"><strong aria-hidden="true">1.1.</strong> Clonando o projeto</a></li><li class="chapter-item expanded "><a href="documentation/configuring/configuring.html"><strong aria-hidden="true">1.2.</strong> Configurando a Godot</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="documentation/configuring/downloading-godot/downloading-goodt.html"><strong aria-hidden="true">1.2.1.</strong> Instalando a Godot</a></li><li class="chapter-item expanded "><a href="documentation/configuring/importing/importing.html"><strong aria-hidden="true">1.2.2.</strong> Importando o projeto na Godot</a></li><li class="chapter-item expanded "><a href="documentation/configuring/dialogic/dialogic.html"><strong aria-hidden="true">1.2.3.</strong> Baixando o plugin Dialogic</a></li><li class="chapter-item expanded "><a href="documentation/configuring/export-templates/export-templates.html"><strong aria-hidden="true">1.2.4.</strong> Baixando os Export Templates</a></li><li class="chapter-item expanded "><a href="documentation/configuring/building/building.html"><strong aria-hidden="true">1.2.5.</strong> Exportando as builds</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="documentation/configuring/building/web/web.html"><strong aria-hidden="true">1.2.5.1.</strong> Web</a></li><li class="chapter-item expanded "><a href="documentation/configuring/building/desktop/desktop.html"><strong aria-hidden="true">1.2.5.2.</strong> Desktop</a></li><li class="chapter-item expanded "><a href="documentation/configuring/building/android/android.html"><strong aria-hidden="true">1.2.5.3.</strong> Android</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="documentation/modifying/modifying.html"><strong aria-hidden="true">1.3.</strong> Modificando o projeto</a></li></ol></li><li class="chapter-item expanded "><a href="versioning/changelog-description.html"><strong aria-hidden="true">2.</strong> Changelog das versões</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="versioning/understanding-version-numbers.html"><strong aria-hidden="true">2.1.</strong> Entendendo os números das versões</a></li><li class="chapter-item expanded "><a href="versioning/versions/version-0.html"><strong aria-hidden="true">2.2.</strong> Versão 0</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="versioning/versions/0/v0-1-22-12-16-0/changelog.html"><strong aria-hidden="true">2.2.1.</strong> v0.1.22.12.16.0</a></li><li class="chapter-item expanded "><a href="versioning/versions/0/v0-1-22-12-15-0/changelog.html"><strong aria-hidden="true">2.2.2.</strong> v0.1.22.12.15.0</a></li><li class="chapter-item expanded "><a href="versioning/versions/0/v0-0-22-12-05-0/changelog.html"><strong aria-hidden="true">2.2.3.</strong> v0.0.22.12.05.0</a></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Alfabetiza</a></li><li class="chapter-item expanded "><a href="documentation/documentation-description.html"><strong aria-hidden="true">1.</strong> Documentação</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="documentation/cloning/cloning.html"><strong aria-hidden="true">1.1.</strong> Clonando o projeto</a></li><li class="chapter-item expanded "><a href="documentation/configuring/configuring.html"><strong aria-hidden="true">1.2.</strong> Configurando a Godot</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="documentation/configuring/downloading-godot/downloading-goodt.html"><strong aria-hidden="true">1.2.1.</strong> Instalando a Godot</a></li><li class="chapter-item expanded "><a href="documentation/configuring/importing/importing.html"><strong aria-hidden="true">1.2.2.</strong> Importando o projeto na Godot</a></li><li class="chapter-item expanded "><a href="documentation/configuring/dialogic/dialogic.html"><strong aria-hidden="true">1.2.3.</strong> Baixando o plugin Dialogic</a></li><li class="chapter-item expanded "><a href="documentation/configuring/export-templates/export-templates.html"><strong aria-hidden="true">1.2.4.</strong> Baixando os Export Templates</a></li><li class="chapter-item expanded "><a href="documentation/configuring/building/building.html"><strong aria-hidden="true">1.2.5.</strong> Exportando as builds</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="documentation/configuring/building/web/web.html"><strong aria-hidden="true">1.2.5.1.</strong> Web</a></li><li class="chapter-item expanded "><a href="documentation/configuring/building/desktop/desktop.html"><strong aria-hidden="true">1.2.5.2.</strong> Desktop</a></li><li class="chapter-item expanded "><a href="documentation/configuring/building/android/android.html"><strong aria-hidden="true">1.2.5.3.</strong> Android</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="documentation/modifying/modifying.html"><strong aria-hidden="true">1.3.</strong> Modificando o projeto</a></li></ol></li><li class="chapter-item expanded "><a href="versioning/changelog-description.html"><strong aria-hidden="true">2.</strong> Changelog das versões</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="versioning/understanding-version-numbers.html"><strong aria-hidden="true">2.1.</strong> Entendendo os números das versões</a></li><li class="chapter-item expanded "><a href="versioning/versions/version-0.html"><strong aria-hidden="true">2.2.</strong> Versão 0</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="versioning/versions/0/v0-2-23-01-11-1/changelog.html"><strong aria-hidden="true">2.2.1.</strong> v0.2.23.01.11.1</a></li><li class="chapter-item expanded "><a href="versioning/versions/0/v0-2-23-01-11-0/changelog.html"><strong aria-hidden="true">2.2.2.</strong> v0.2.23.01.11.0</a></li><li class="chapter-item expanded "><a href="versioning/versions/0/v0-1-22-12-16-0/changelog.html"><strong aria-hidden="true">2.2.3.</strong> v0.1.22.12.16.0</a></li><li class="chapter-item expanded "><a href="versioning/versions/0/v0-1-22-12-15-0/changelog.html"><strong aria-hidden="true">2.2.4.</strong> v0.1.22.12.15.0</a></li><li class="chapter-item expanded "><a href="versioning/versions/0/v0-0-22-12-05-0/changelog.html"><strong aria-hidden="true">2.2.5.</strong> v0.0.22.12.05.0</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -357,11 +357,39 @@
 <p>Por exemplo, se eu liberar uam versão de número <code>0.0.22.12.05.0</code> e, ainda no mesmo dia, perceber algum problema que precisa ser resolvido imediatamente, eu farei uma nova versão de número <code>0.0.22.12.05.1</code>.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="versão-0"><a class="header" href="#versão-0">Versão 0</a></h1>
 <p>Essa é uma versão preliminar do jogo, em que a visão inicial dos elementos e minijogos ainda não está completamente realizada.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="022301111"><a class="header" href="#022301111">0.2.23.01.11.1</a></h1>
+<p>Essa versão apenas corrige alguns bugs e problemas da versão anterior. Mais especificamente, problemas na build de Android com as cartas que devem ser arrastadas, e com problemas de permissão no Android.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="022301110"><a class="header" href="#022301110">0.2.23.01.11.0</a></h1>
+<p>Nessa versão, a maioria das mudanças foram voltadas para melhorias estéticas no jogo. Para isso, foram feitos novos estilos para os elementos de interface seguindo padrões neumorphicos para a estilização; além de ter sido feito o plano de fundo do elemento Ar, que estava faltando. Por fim, foi adicionado suporte e builds funcionais para android.</p>
+<h2 id="mudanças-notáveis-nessa-versão"><a class="header" href="#mudanças-notáveis-nessa-versão">Mudanças notáveis nessa versão</a></h2>
+<ul>
+<li>
+<p>Muda o estilo dos elementos de interface do jogo, passando a seguir um estilo neumorfico.
+<img src="versioning/versions/0/v0-2-23-01-11-0/assets/img1.png" alt="Imagem do design inicial da tela de agradecimentos" /></p>
+</li>
+<li>
+<p>Cria e adiciona no jogo o plano de fundo do elemento Ar que estava faltando.
+<img src="versioning/versions/0/v0-2-23-01-11-0/assets/img2.png" alt="Imagem do design inicial da tela de agradecimentos" /></p>
+</li>
+<li>
+<p>Adiciona animais ajudantes diferentes nos elementos diferentes.
+<img src="versioning/versions/0/v0-2-23-01-11-0/assets/tutorial1.png" alt="Imagem da Cutia ajudante" />
+<img src="versioning/versions/0/v0-2-23-01-11-0/assets/tutorial2.png" alt="Imagem da Cutia ajudante" />
+<img src="versioning/versions/0/v0-2-23-01-11-0/assets/tutorial3.png" alt="Imagem da Cutia ajudante" />
+<img src="versioning/versions/0/v0-2-23-01-11-0/assets/tutorial4.png" alt="Imagem da Cutia ajudante" /></p>
+</li>
+<li>
+<p>Adiciona sons de ambiente, que ficam tocando no fundo de cada elemento.</p>
+</li>
+<li>
+<p>Adiciona suporte e builds para android.</p>
+</li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="012212160"><a class="header" href="#012212160">0.1.22.12.16.0</a></h1>
 <p>Essa versão apenas corrige alguns bugs e problemas da versão anterior. Nada de notável.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="012212150"><a class="header" href="#012212150">0.1.22.12.15.0</a></h1>
 <p>Nessa versão, a maioria das mudanças foram relacionadas ao sistema de build, de forma a facilitar o processo de criação dos executáveis das diferentes versões do app. A documentação também será atualizada para refletir estas mudanças no processo de build.</p>
-<h2 id="mudanças-notáveis-nessa-versão"><a class="header" href="#mudanças-notáveis-nessa-versão">Mudanças notáveis nessa versão</a></h2>
+<h2 id="mudanças-notáveis-nessa-versão-1"><a class="header" href="#mudanças-notáveis-nessa-versão-1">Mudanças notáveis nessa versão</a></h2>
 <ul>
 <li>Adiciona uma tela com agradecimentos e créditos aos softwares que foram majoritariamente utilizados na produção do jogo, além de dar crédito aos criadores dos áudios que foram utilizados no elemento ar.</li>
 </ul>
@@ -389,7 +417,7 @@
 <div style="break-before: page; page-break-before: always;"></div><h1 id="002212050"><a class="header" href="#002212050">0.0.22.12.05.0</a></h1>
 <p>Essa é a primeira versão oficialmente documentada do projeto, mas já houveram diversas outras versões antes dessa.</p>
 <p>O começo do desenvolvimento dessa versão se deu num ponto em que todos os minijogos e artes para os minijogos haviam sido finalizados, faltando apenas o plano de fundo do elemento ar.</p>
-<h2 id="mudanças-notáveis-nessa-versão-1"><a class="header" href="#mudanças-notáveis-nessa-versão-1">Mudanças notáveis nessa versão</a></h2>
+<h2 id="mudanças-notáveis-nessa-versão-2"><a class="header" href="#mudanças-notáveis-nessa-versão-2">Mudanças notáveis nessa versão</a></h2>
 <ul>
 <li>Muda o design das cenas de leitura da lenda, aumentando a fonte e adicionando a ilustração de um livro:</li>
 </ul>
