--- a/versioning/versions/0/v0-2-23-01-11-0/changelog.html
+++ b/versioning/versions/0/v0-2-23-01-11-0/changelog.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>v0.0.22.12.05.0 - Alfabetiza</title>
+        <title>v0.2.23.01.11.0 - Alfabetiza</title>
 
 
         <!-- Custom HTML head -->
@@ -80,7 +80,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../../../index.html">Alfabetiza</a></li><li class="chapter-item expanded "><a href="../../../../documentation/documentation-description.html"><strong aria-hidden="true">1.</strong> Documentação</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../../documentation/cloning/cloning.html"><strong aria-hidden="true">1.1.</strong> Clonando o projeto</a></li><li class="chapter-item expanded "><a href="../../../../documentation/configuring/configuring.html"><strong aria-hidden="true">1.2.</strong> Configurando a Godot</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../../documentation/configuring/downloading-godot/downloading-goodt.html"><strong aria-hidden="true">1.2.1.</strong> Instalando a Godot</a></li><li class="chapter-item expanded "><a href="../../../../documentation/configuring/importing/importing.html"><strong aria-hidden="true">1.2.2.</strong> Importando o projeto na Godot</a></li><li class="chapter-item expanded "><a href="../../../../documentation/configuring/dialogic/dialogic.html"><strong aria-hidden="true">1.2.3.</strong> Baixando o plugin Dialogic</a></li><li class="chapter-item expanded "><a href="../../../../documentation/configuring/export-templates/export-templates.html"><strong aria-hidden="true">1.2.4.</strong> Baixando os Export Templates</a></li><li class="chapter-item expanded "><a href="../../../../documentation/configuring/building/building.html"><strong aria-hidden="true">1.2.5.</strong> Exportando as builds</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../../documentation/configuring/building/web/web.html"><strong aria-hidden="true">1.2.5.1.</strong> Web</a></li><li class="chapter-item expanded "><a href="../../../../documentation/configuring/building/desktop/desktop.html"><strong aria-hidden="true">1.2.5.2.</strong> Desktop</a></li><li class="chapter-item expanded "><a href="../../../../documentation/configuring/building/android/android.html"><strong aria-hidden="true">1.2.5.3.</strong> Android</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../../../documentation/modifying/modifying.html"><strong aria-hidden="true">1.3.</strong> Modificando o projeto</a></li></ol></li><li class="chapter-item expanded "><a href="../../../../versioning/changelog-description.html"><strong aria-hidden="true">2.</strong> Changelog das versões</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../../versioning/understanding-version-numbers.html"><strong aria-hidden="true">2.1.</strong> Entendendo os números das versões</a></li><li class="chapter-item expanded "><a href="../../../../versioning/versions/version-0.html"><strong aria-hidden="true">2.2.</strong> Versão 0</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../../versioning/versions/0/v0-2-23-01-11-1/changelog.html"><strong aria-hidden="true">2.2.1.</strong> v0.2.23.01.11.1</a></li><li class="chapter-item expanded "><a href="../../../../versioning/versions/0/v0-2-23-01-11-0/changelog.html"><strong aria-hidden="true">2.2.2.</strong> v0.2.23.01.11.0</a></li><li class="chapter-item expanded "><a href="../../../../versioning/versions/0/v0-1-22-12-16-0/changelog.html"><strong aria-hidden="true">2.2.3.</strong> v0.1.22.12.16.0</a></li><li class="chapter-item expanded "><a href="../../../../versioning/versions/0/v0-1-22-12-15-0/changelog.html"><strong aria-hidden="true">2.2.4.</strong> v0.1.22.12.15.0</a></li><li class="chapter-item expanded "><a href="../../../../versioning/versions/0/v0-0-22-12-05-0/changelog.html" class="active"><strong aria-hidden="true">2.2.5.</strong> v0.0.22.12.05.0</a></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../../../index.html">Alfabetiza</a></li><li class="chapter-item expanded "><a href="../../../../documentation/documentation-description.html"><strong aria-hidden="true">1.</strong> Documentação</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../../documentation/cloning/cloning.html"><strong aria-hidden="true">1.1.</strong> Clonando o projeto</a></li><li class="chapter-item expanded "><a href="../../../../documentation/configuring/configuring.html"><strong aria-hidden="true">1.2.</strong> Configurando a Godot</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../../documentation/configuring/downloading-godot/downloading-goodt.html"><strong aria-hidden="true">1.2.1.</strong> Instalando a Godot</a></li><li class="chapter-item expanded "><a href="../../../../documentation/configuring/importing/importing.html"><strong aria-hidden="true">1.2.2.</strong> Importando o projeto na Godot</a></li><li class="chapter-item expanded "><a href="../../../../documentation/configuring/dialogic/dialogic.html"><strong aria-hidden="true">1.2.3.</strong> Baixando o plugin Dialogic</a></li><li class="chapter-item expanded "><a href="../../../../documentation/configuring/export-templates/export-templates.html"><strong aria-hidden="true">1.2.4.</strong> Baixando os Export Templates</a></li><li class="chapter-item expanded "><a href="../../../../documentation/configuring/building/building.html"><strong aria-hidden="true">1.2.5.</strong> Exportando as builds</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../../documentation/configuring/building/web/web.html"><strong aria-hidden="true">1.2.5.1.</strong> Web</a></li><li class="chapter-item expanded "><a href="../../../../documentation/configuring/building/desktop/desktop.html"><strong aria-hidden="true">1.2.5.2.</strong> Desktop</a></li><li class="chapter-item expanded "><a href="../../../../documentation/configuring/building/android/android.html"><strong aria-hidden="true">1.2.5.3.</strong> Android</a></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../../../documentation/modifying/modifying.html"><strong aria-hidden="true">1.3.</strong> Modificando o projeto</a></li></ol></li><li class="chapter-item expanded "><a href="../../../../versioning/changelog-description.html"><strong aria-hidden="true">2.</strong> Changelog das versões</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../../versioning/understanding-version-numbers.html"><strong aria-hidden="true">2.1.</strong> Entendendo os números das versões</a></li><li class="chapter-item expanded "><a href="../../../../versioning/versions/version-0.html"><strong aria-hidden="true">2.2.</strong> Versão 0</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../../../versioning/versions/0/v0-2-23-01-11-1/changelog.html"><strong aria-hidden="true">2.2.1.</strong> v0.2.23.01.11.1</a></li><li class="chapter-item expanded "><a href="../../../../versioning/versions/0/v0-2-23-01-11-0/changelog.html" class="active"><strong aria-hidden="true">2.2.2.</strong> v0.2.23.01.11.0</a></li><li class="chapter-item expanded "><a href="../../../../versioning/versions/0/v0-1-22-12-16-0/changelog.html"><strong aria-hidden="true">2.2.3.</strong> v0.1.22.12.16.0</a></li><li class="chapter-item expanded "><a href="../../../../versioning/versions/0/v0-1-22-12-15-0/changelog.html"><strong aria-hidden="true">2.2.4.</strong> v0.1.22.12.15.0</a></li><li class="chapter-item expanded "><a href="../../../../versioning/versions/0/v0-0-22-12-05-0/changelog.html"><strong aria-hidden="true">2.2.5.</strong> v0.0.22.12.05.0</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -141,40 +141,30 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="002212050"><a class="header" href="#002212050">0.0.22.12.05.0</a></h1>
-<p>Essa é a primeira versão oficialmente documentada do projeto, mas já houveram diversas outras versões antes dessa.</p>
-<p>O começo do desenvolvimento dessa versão se deu num ponto em que todos os minijogos e artes para os minijogos haviam sido finalizados, faltando apenas o plano de fundo do elemento ar.</p>
+                        <h1 id="022301110"><a class="header" href="#022301110">0.2.23.01.11.0</a></h1>
+<p>Nessa versão, a maioria das mudanças foram voltadas para melhorias estéticas no jogo. Para isso, foram feitos novos estilos para os elementos de interface seguindo padrões neumorphicos para a estilização; além de ter sido feito o plano de fundo do elemento Ar, que estava faltando. Por fim, foi adicionado suporte e builds funcionais para android.</p>
 <h2 id="mudanças-notáveis-nessa-versão"><a class="header" href="#mudanças-notáveis-nessa-versão">Mudanças notáveis nessa versão</a></h2>
 <ul>
-<li>Muda o design das cenas de leitura da lenda, aumentando a fonte e adicionando a ilustração de um livro:</li>
-</ul>
-<p><img src="assets/earth-tale.png" alt="Imagem da lenda do elemento terra" /></p>
-<p><img src="assets/water-tale.png" alt="Imagem da lenda do elemento água" /></p>
-<p><img src="assets/fire-tale.png" alt="Imagem da lenda do elemento fogo" /></p>
-<ul>
 <li>
-<p>Otimiza o plano de fundo do elemento fogo, melhorando a performance em aparelhos menos potentes.</p>
+<p>Muda o estilo dos elementos de interface do jogo, passando a seguir um estilo neumorfico.
+<img src="assets/img1.png" alt="Imagem do design inicial da tela de agradecimentos" /></p>
 </li>
 <li>
-<p>Faz as cartas que tocam áduio (como as do Palavra Valise 2 e do Acrofonia) toquem o áudio quando o mouse passa por cima da carta ao invés de esperar o clique.</p>
+<p>Cria e adiciona no jogo o plano de fundo do elemento Ar que estava faltando.
+<img src="assets/img2.png" alt="Imagem do design inicial da tela de agradecimentos" /></p>
 </li>
 <li>
-<p>Faz com que o próximo nível seja automaticamente carregado ao finalizar um nível.</p>
-</li>
-</ul>
-<h2 id="próximos-passos"><a class="header" href="#próximos-passos">Próximos passos</a></h2>
-<ul>
-<li>
-<p>Fazer o plano de fundo do elemento Ar.</p>
+<p>Adiciona animais ajudantes diferentes nos elementos diferentes.
+<img src="assets/tutorial1.png" alt="Imagem da Cutia ajudante" />
+<img src="assets/tutorial2.png" alt="Imagem da Cutia ajudante" />
+<img src="assets/tutorial3.png" alt="Imagem da Cutia ajudante" />
+<img src="assets/tutorial4.png" alt="Imagem da Cutia ajudante" /></p>
 </li>
 <li>
-<p>Simplificar o processo de exportação das diferentes versões do jogo (para as diferentes plataformas, sem login, login local e login pelo servidor).</p>
+<p>Adiciona sons de ambiente, que ficam tocando no fundo de cada elemento.</p>
 </li>
 <li>
-<p>Mudar o design de seleção dos minijogos.</p>
-</li>
-<li>
-<p>Mudar o design de seleção de elementos.</p>
+<p>Adiciona suporte e builds para android.</p>
 </li>
 </ul>
 
@@ -182,10 +172,13 @@
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../../../versioning/versions/0/v0-1-22-12-15-0/changelog.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../../../versioning/versions/0/v0-2-23-01-11-1/changelog.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
+                            <a rel="next" href="../../../../versioning/versions/0/v0-1-22-12-16-0/changelog.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -193,10 +186,13 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../../../versioning/versions/0/v0-1-22-12-15-0/changelog.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../../../versioning/versions/0/v0-2-23-01-11-1/changelog.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
+                    <a rel="next" href="../../../../versioning/versions/0/v0-1-22-12-16-0/changelog.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
