--- a/documentation/configuring/building/android/android.html
+++ b/documentation/configuring/building/android/android.html
@@ -142,7 +142,11 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="exportando-para-android"><a class="header" href="#exportando-para-android">Exportando para Android</a></h1>
-<p>Instruções de exportação para Android em breve</p>
+<p>Primeiro, é necessário instalar as dependências do sistema de build Android no computador. Para isso, siga os passos na <a href="https://docs.godotengine.org/pt_BR/latest/tutorials/export/exporting_for_android.html">documentação oficial da Godot</a>.</p>
+<p>Depois de seguir todos os passos como descrito, será possível exportar para Android seguindo os mesmos passos que para qualquer outra plataforma:</p>
+<pre><code>Project Settings &gt; Export... &gt; Android &gt; Export Project
+</code></pre>
+<p>Note que para exportar para Android em modo release, é preciso gerar em um segundo keystore file e adicionar no export template, como descrito na documentação da Godot.</p>
 
                     </main>
 
