--- a/index.html
+++ b/index.html
@@ -142,8 +142,94 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="alfabetiza"><a class="header" href="#alfabetiza">Alfabetiza</a></h1>
-<p>Este é um web-livro dedicado a toda a documentação do projeto <a href="https://gitlab.com/pedrotrschneider/alfabetiza-godot">Alfabetiza</a>, um jogo com o propósito de alfabetização de crianças na língua portuguesa.</p>
-<p>Ele inclui changelogs das versões, assim como a documentação do jogo.</p>
+<h2 id="um-jogo-educacional-para-alfabetização-de-crianças-na-língua-portuguesa"><a class="header" href="#um-jogo-educacional-para-alfabetização-de-crianças-na-língua-portuguesa">Um jogo educacional para alfabetização de crianças na língua portuguesa</a></h2>
+<p>Este aplicativo foi desenvolvido em parceria com a Faculdade de Educação da Universidade de São Paulo (FEUSP) e o Instituto de Matemática e Estatística da Universidade de São Paulo (IME-USP).</p>
+<p>Ele tem como objetivo ser uma plataforma voltada para a alfabetização de crianças na língua portuguesa.</p>
+<h2 id="o-jogo"><a class="header" href="#o-jogo">O jogo</a></h2>
+<p>O jogo consiste em uma coletânia de mini-jogos, cada um explorando um aspecto diferente da língua portuguesa. O aprendizado é desenvolvido por meio de interações baseadas em imagens, em textos e em áudios, para garantir um desenvolvimento abrangente das habilidades de comunicação da criança.</p>
+<p>Além disso, caso algum educador queira utilizar o jogo em classe, é possível utilizá-lo com o sistema de login. Dessa forma, o desempenho dos alunos nos minijogos ficam salvos, e podem ser analisados pelo educador posteriormente, com o objetivo de identificar dificuldades em áreas específicas.</p>
+<p><img src="assets/interface1.png" alt="Imagem da tela de login" /></p>
+<p>Versões do jogo sem login também podem ser utilizadas para testes, ocasiões que não permitam acesso à internet, ou quando o acompanhamento individual não é necessário.</p>
+<h2 id="o-cenário"><a class="header" href="#o-cenário">O cenário</a></h2>
+<p>O jogo como um todo está situado em um cenário baseado em lendas tradicionais indígenais brasileiras. Os minijogos são divididos entre os quatro elementos: Terra, Água, Fogo e Ar.</p>
+<p><img src="assets/interface2.png" alt="Imagem da tela de seleção de elementos" /></p>
+<p>Cada um dos elementos é baseado em alguma lenda indígena, que pode ser ouvida após completar o primeiro mini-jogo de cada elemento.</p>
+<ul>
+<li>
+<p>Elemento Terra: Lenda da Grande Árvore do Tamoromu
+<img src="assets/myth1.png" alt="Imagem da tela da lenda do Tamoromu" /></p>
+</li>
+<li>
+<p>Elemento Água: Lenda do Boto Cor de Rosa
+<img src="assets/myth2.png" alt="Imagem da tela da lenda do Boto Cor de Rosa" /></p>
+</li>
+<li>
+<p>Elemento Fogo: Lenda do Primeiro Fogo
+<img src="assets/myth3.png" alt="Imagem da tela da lenda do Primeiro Fogo" /></p>
+</li>
+<li>
+<p>Elemento Ar: Lenda do Uirapuru
+<img src="assets/myth4.png" alt="Imagem da tela da lenda do Uirapuru" /></p>
+</li>
+</ul>
+<h2 id="os-mini-jogos"><a class="header" href="#os-mini-jogos">Os mini-jogos</a></h2>
+<p>Cada um dos quatro elementos se trata de uma coleção de sete mini-jogos, tendo cada minijogo diferentes níveis. Alguns dos mini-jogos aparecem em mais de um elemento, aumentando o nível de dificuldade à medida que progride no jogo.</p>
+<p>Uma descrição completa de todos os mini-jogos presentes no aplicativo pode ser encontrada na seção sobre os minijogos deste livro. Aqui, apenas serão apresentadas algumas imagens de minijogos:</p>
+<ul>
+<li>
+<p>Mini-jogo Caça Letras, do elemento Terra
+<img src="assets/minigame1.png" alt="Imagem do minijogo Caça Letras do elemento Terra" /></p>
+</li>
+<li>
+<p>Mini-jogo Palavra Valise 1, do elemento Terra
+<img src="assets/minigame2.png" alt="Imagem do minijogo Palavra Valise 1 do elemento Terra" /></p>
+</li>
+<li>
+<p>Mini-jogo Rébus 2, do elemento Água
+<img src="assets/minigame3.png" alt="Imagem do minijogo Rébus 2 do elemento Água" /></p>
+</li>
+<li>
+<p>Mini-jogo Palavra Valise 1, do elemento Água 
+<img src="assets/minigame4.png" alt="Imagem do minijogo Palavra Valise 1 do elemento Água" /></p>
+</li>
+<li>
+<p>Mini-jogo Corrida do Fogo, do elemento Fogo
+<img src="assets/minigame5.png" alt="Imagem do minijogo Corrida do Fogo do elemento Fogo" /></p>
+</li>
+<li>
+<p>Mini-jogo Caça Palavras, do elemento Fogo
+<img src="assets/minigame6.png" alt="Imagem do minijogo Caça Palavras do elemento Fogo" /></p>
+</li>
+<li>
+<p>Mini-jogo Rébus 3, do elemento Fogo
+<img src="assets/minigame7.png" alt="Imagem do minijogo Rébus 3 do elemento Fogo" /></p>
+</li>
+<li>
+<p>Mini-jogo Jogo da Memória, do elemento Ar
+<img src="assets/minigame8.png" alt="Imagem do minijogo Jogo da Memória do elemento Ar" /></p>
+</li>
+<li>
+<p>Mini-jogo Reconto, do elemento Ar
+<img src="assets/minigame9.png" alt="Imagem do minijogo Reconto do elemento Ar" /></p>
+</li>
+</ul>
+<p>Além disso, todos os mini-jogos contam com tutoriais específicos, com mascotes explicando como funciona cada minijogo, tanto em formato de texto quanto em formato de voz.</p>
+<p><img src="assets/tutorial1.png" alt="Imagem de um tutrial no elemento Terra" />
+<img src="assets/tutorial2.png" alt="Imagem de um tutrial no elemento Água" />
+<img src="assets/tutorial3.png" alt="Imagem de um tutrial no elemento Fogo" />
+<img src="assets/tutorial4.png" alt="Imagem de um tutrial no elemento Ar" /></p>
+<h2 id="softwares-utilizados"><a class="header" href="#softwares-utilizados">Softwares utilizados</a></h2>
+<ul>
+<li>O jogo foi desenvolvido inteiramente utilizando a <a href="godotengine.org/">Godot Game Engine</a></li>
+<li>Todas as artes foram confeccionadas utilizando o <a href="http://krita.org/">Krita</a></li>
+<li>O servidor foi desenvolvido utilizando <a href="https://www.php.net/">PHP</a> e <a href="https://www.mysql.com/">MySQL</a></li>
+</ul>
+<h2 id="agradecimentos-especiais"><a class="header" href="#agradecimentos-especiais">Agradecimentos especiais</a></h2>
+<ul>
+<li>À Pró-Reitoria de Pesquisa da USP (PRP-USP) pelo financiamento do projeto;</li>
+<li>À Escola de Aplicação da Faculdade de Educação da USP (EAFEUSP)</li>
+<li>Ao Setor de Comunicação e Mídia da FEUSP</li>
+</ul>
 
                     </main>
 
